--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html lang="en">
   <head>Title</head>
-  <body>This is a content!</body>
+  <body>
+    This is a content!
+    LOGIN FORM
+  </body>
 </html>
